--- a/SoundBoard/SoundBoard/MainPage.xaml
+++ b/SoundBoard/SoundBoard/MainPage.xaml
@@ -1,24 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Notes.MainPage">
-    <StackLayout Margin="10,35,10,10">
-        <Label Text="Notes"
-               HorizontalOptions="Center"
-               FontAttributes="Bold" />
-        <Editor x:Name="editor"
-                Placeholder="Enter your note"
-                HeightRequest="100" />
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <Button Text="Save"
-                    Clicked="OnSaveButtonClicked" />
-            <Button Grid.Column="1"
-                    Text="Delete"
-                    Clicked="OnDeleteButtonClicked"/>
-        </Grid>
-    </StackLayout>
+             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             x:Class="SoundBoard.MainPage">
+    <ContentPage.Content>
+        <StackLayout Margin="20,35,20,25">
+            <Label Text="Nyeaaaah EH"
+           VerticalOptions="FillAndExpand"
+           BackgroundColor="Gray" />
+            <Label Text="Manz Dunno"
+           VerticalOptions="FillAndExpand"
+           BackgroundColor="Gray" />
+            <Label Text="Badtri Tingggg"
+           VerticalOptions="FillAndExpand"
+           BackgroundColor="Gray" />
+        </StackLayout>
+    </ContentPage.Content>
 </ContentPage>
